/**
 * Copyright 2019, SumUp Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import React from 'react';

import NavLabel from './NavLabel';

describe('NavLabel', () => {
  describe('styles', () => {
    it('should render with default styles', () => {
      const actual = mount(<NavLabel>Item 01</NavLabel>);
      expect(actual).toMatchSnapshot();
    });

    it('should render and match snapshot when visible', () => {
      const actual = mount(<NavLabel visible>Item 01</NavLabel>);
      expect(actual).toMatchSnapshot();
    });

    it('should render and match snapshot when secondary', () => {
      const actual = mount(
        <NavLabel visible secondary>
          Item 01
        </NavLabel>
      );
      expect(actual).toMatchSnapshot();
    });
  });

  describe('accessibility', () => {
    it('should meet accessibility guidelines', async () => {
      const wrapper = renderToHtml(<NavLabel>Item 01</NavLabel>);
      const actual = await axe(wrapper);
      expect(actual).toHaveNoViolations();
    });
  });
});
